--- a/css/lifes.css
+++ b/css/lifes.css
@@ -25,6 +25,12 @@
 .life.science {
 	background-color: #E53935;
 }
+.life.arts {
+	background-color: #1cc747;
+}
+.life.politics {
+	background-color: #4e3eda;
+}
 .life.events {
 	background-color: #999;
 }
